<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <LinearLayout
        android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:gravity="right"
    	>
    	<Button
    		android:id="@+id/button_quit_select"
    		android:layout_gravity="right"
    		android:layout_width="75dp"
    		android:layout_height="50dp"
    		android:text="@string/quit"
    		/>
    </LinearLayout>
    
    <include layout="@layout/divider"/>
    
    <Button
    	android:id="@+id/button_lowfuel"
    	android:layout_width="fill_parent"
    	android:layout_height="50dp"
    	android:text="@string/selectlowfuel"
    	/>

    <Button
    	android:id="@+id/button_gas"
    	android:layout_width="fill_parent"
    	android:layout_height="50dp"
    	android:text="@string/selectfuel"
    	/>

    <Button
    	android:id="@+id/button_view"
    	android:layout_width="fill_parent"
    	android:layout_height="50dp"
    	android:text="@string/selectview"
    	/>
    <Button
    	android:id="@+id/button_settings"
    	android:layout_width="fill_parent"
    	android:layout_height="50dp"
    	android:text="@string/selectsettings"
    	/>
    
</LinearLayout>