<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <LinearLayout
        android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:gravity="right"
    	>
    	<Button
    		android:id="@+id/button_back_settings"
    		android:layout_gravity="right"
    		android:layout_width="75dp"
    		android:layout_height="50dp"
    		android:text="@string/back"
    		/>
    	<Button
    		android:id="@+id/button_quit_settings"
    		android:layout_gravity="right"
    		android:layout_width="75dp"
    		android:layout_height="50dp"
    		android:text="@string/quit"
    		/>
    </LinearLayout>
    
    <include layout="@layout/divider"/>
    
    <Button
    	android:id="@+id/button_edit"
    	android:layout_width="fill_parent"
    	android:layout_height="50dp"
    	android:text="@string/settings_edit"
    	/>

    <Button
    	android:id="@+id/button_import"
    	android:layout_width="fill_parent"
    	android:layout_height="50dp"
    	android:text="@string/settings_import"
    	/>
    
    <Button
    	android:id="@+id/button_export"
    	android:layout_width="fill_parent"
    	android:layout_height="50dp"
    	android:text="@string/settings_export"
    	/>
    
</LinearLayout>