<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"    
    >
    
    <LinearLayout
        android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:gravity="right"
    	>
    	<Button
    		android:id="@+id/button_ok_lf"
    		android:layout_gravity="right"
    		android:layout_width="75dp"
    		android:layout_height="50dp"
    		android:text="@string/ok"
	    	android:textSize="18sp"
	   		android:shadowColor="#222222"
	   		android:shadowRadius="3"
	   		android:shadowDx="1"
	   		android:shadowDy="1"    		
    		android:background="@drawable/button_background"
    		/>
    	<Button
    		android:id="@+id/button_back_lf"
    		android:layout_gravity="right"
    		android:layout_width="75dp"
    		android:layout_height="50dp"
    		android:text="@string/back"
	    	android:textSize="18sp"
	   		android:shadowColor="#222222"
	   		android:shadowRadius="3"
	   		android:shadowDx="1"
	   		android:shadowDy="1"    		
    		android:background="@drawable/button_background"
    		/>
    	<Button
    		android:id="@+id/button_quit_lf"
    		android:layout_gravity="right"
    		android:layout_width="75dp"
    		android:layout_height="50dp"
    		android:text="@string/quit"
	    	android:textSize="18sp"
	   		android:shadowColor="#222222"
	   		android:shadowRadius="3"
	   		android:shadowDx="1"
	   		android:shadowDy="1"    		
    		android:background="@drawable/button_background"
    		/>
    </LinearLayout>
    
    <include layout="@layout/divider"/>
    
    <TextView
    	android:id="@+id/label_lf"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="Low fuel mileage"
    />
    <EditText
    	android:id="@+id/lowfuel_edit_lf"
    	android:layout_width="200sp"
    	android:layout_height="wrap_content"
    />
    
</LinearLayout>